<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AppLock.AppLockFragment">

    <include
        android:id="@+id/include_header"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/number_keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_header">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/password_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/app_lock_password_placeholder"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/password_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/app_lock_password_placeholder"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/password_label3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/app_lock_password_placeholder"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/password_label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/app_lock_password_placeholder"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/number_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_header"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:id="@+id/number_section1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_button1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number1"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/number_button2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number2"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/number_button3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number3"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/number_section2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_button4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number4"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/number_button5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number5"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/number_button6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number6"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/number_section3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_button7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number7"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/number_button8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number8"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/number_button9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number9"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/number_section4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_button_hyphen"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number_none"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/number_button0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number0"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/number_button_back"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/ex_red"
                android:text="@string/app_lock_number_back"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>