<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ex_thema"
    android:clickable="true"
    tools:context=".View.Setting.SettingFragment">

    <include
        android:id="@+id/include_header"
        layout="@layout/layout_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/app_setting_layout"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="App設定"
                    android:textColor="@color/ex_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/ex_red"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/notify_setting_2">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/icon_app_lock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:maxWidth="200dp"
                    android:maxLines="2"
                    android:text="@string/setting_app_lock"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/app_lock_button"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/link_red_background"
                    android:text="ON"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/notify_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notify_setting_3">

                <TextView
                    android:id="@+id/app_lock_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/setting_app_lock_desc"
                    android:textColor="@color/ex_text" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/link_layout"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/include_header">

                <TextView
                    android:id="@+id/link_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="LINK"
                    android:textColor="@color/ex_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_inquiry_row"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/ex_red"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/notify_title_layout">


                <ImageView
                    android:id="@+id/link_inquiry_icon"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/icon_inquiry" />

                <TextView
                    android:id="@+id/link_inquiry_icon_label"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/setting_link_inquiry"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_terms_of_service_row"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/ex_red"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/ads_setting_1">


                <ImageView
                    android:id="@+id/link_terms_of_service_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/icon_note" />

                <TextView
                    android:id="@+id/link_terms_of_service_label"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/setting_link_terms_of_service"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ads_setting_2">

                <TextView
                    android:id="@+id/link_desc_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/setting_link_desc"
                    android:textColor="@color/ex_text"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>